--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,16 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: "postgres"
+  username: <%= ENV['PGS_USERNAME'] %>
+  password: <%= ENV['PGS_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -22,4 +25,8 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV['PGS_DB_NAME'] %>
+  username: <%= ENV['PGS_USERNAME'] %>
+  password: <%= ENV['PGS_PASSWORD'] %>
